# Chelper

./: .gitignore  README.md  bot.py  pyproject.toml
cogs/: actionCommands.py  homework.py  inscription.py  oclass.py  test.py
db/: dbo.py
